@@ -2,19 +2,17 @@ package com.idatt2105.backend.service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.idatt2105.backend.dto.CommentDTO;
 import com.idatt2105.backend.model.Comment;
-import com.idatt2105.backend.model.Quiz;
 import com.idatt2105.backend.model.User;
 import com.idatt2105.backend.repository.CommentRepository;
 import com.idatt2105.backend.repository.QuizRepository;
 import com.idatt2105.backend.repository.UserRepository;
-import com.idatt2105.backend.util.CommentNotFoundException;
+import com.idatt2105.backend.util.InvalidIdException;
 
 @Service
 public class CommentService {
@@ -34,37 +32,36 @@ public class CommentService {
   }
 
   public List<CommentDTO> getAllComments() {
-    return commentRepository.findAll().stream().map(CommentDTO::new).collect(Collectors.toList());
+    return commentRepository.findAll().stream().map(CommentDTO::new).toList();
   }
 
   public CommentDTO getCommentById(Long id) {
-    Comment comment =
-        commentRepository
-            .findById(id)
-            .orElseThrow(() -> new CommentNotFoundException("Comment not found with id: " + id));
+    if (id == null) {
+      throw new InvalidIdException("Id cannot be null");
+    }
+    Comment comment = findComment(id);
     return new CommentDTO(comment);
   }
 
   public List<CommentDTO> getCommentsByQuizId(Long quizId) {
-    Quiz quiz =
-        quizRepository
-            .findById(quizId)
-            .orElseThrow(() -> new IllegalStateException("Quiz with id " + quizId + " not found"));
-    List<Comment> comments = commentRepository.findByQuiz(quiz);
-    List<CommentDTO> commentDTOs =
-        comments.stream().map(CommentDTO::new).collect(Collectors.toList());
-    return commentDTOs;
+    if (quizId == null) {
+      throw new IllegalArgumentException("Quiz id cannot be null");
+    }
+    if (!quizRepository.existsById(quizId)) {
+      throw new InvalidIdException("Quiz not found with id: " + quizId);
+    }
+
+    List<Comment> comments = commentRepository.findByQuiz(quizRepository.findById(quizId).get());
+    return comments.stream().map(CommentDTO::new).toList();
   }
 
   public List<CommentDTO> getCommentsByUserId(Long userId) {
     User user =
         userRepository
             .findById(userId)
-            .orElseThrow(() -> new IllegalStateException("User with id " + userId + " not found"));
+            .orElseThrow(() -> new InvalidIdException("User with id " + userId + " not found"));
     List<Comment> comments = commentRepository.findByUser(user);
-    List<CommentDTO> commentDTOs =
-        comments.stream().map(CommentDTO::new).collect(Collectors.toList());
-    return commentDTOs;
+    return comments.stream().map(CommentDTO::new).toList();
   }
 
   public CommentDTO saveComment(CommentDTO commentDTO) {
@@ -80,10 +77,7 @@ public class CommentService {
   }
 
   public void updateComment(Long id, CommentDTO updatedComment) {
-    Comment comment =
-        commentRepository
-            .findById(id)
-            .orElseThrow(() -> new CommentNotFoundException("Comment not found with id: " + id));
+    Comment comment = findComment(id);
     comment.setContent(updatedComment.getContent());
     comment.setLastModifiedDate(LocalDateTime.now());
 
@@ -94,7 +88,13 @@ public class CommentService {
     if (commentRepository.existsById(id)) {
       commentRepository.deleteById(id);
     } else {
-      throw new CommentNotFoundException("Comment not found with id: " + id);
+      throw new InvalidIdException("Comment not found with id: " + id);
     }
+  }
+
+  private Comment findComment(Long id) {
+    return commentRepository
+        .findById(id)
+        .orElseThrow(() -> new InvalidIdException("Comment not found with id: " + id));
   }
 }
